# fraud-detection

./: .env.example  .gitignore  Pipfile  README.md  pyproject.toml  tox.ini
app/: model.py  utils.py
models/: exp_01_random_forest.py  exp_02_anomaly_detection.py  split_data.py  utils.py
scripts/: check.sh  format.sh
