[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
description = ""
version = "1.0.0"
readme = "README.md"
keywords = ["fraud", "models"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: FastAPI",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = []
namespaces = true

# [project.scripts]
# my-script = "my_package.module:function"

[tool.isort]
profile = "black"
line_length = 88
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
combine_as_imports = true
ensure_newline_before_comments = true
include_trailing_comma = true
known_first_party = ["app"]

[tool.black]
line_length = 88
color = true
target_version = ["py38", "py39", "py310"]